# evl_net

./: .gitignore  CMakeLists.txt  README.md
include/: .config.h.un~  .tcp_session.h.un~
include/evl_net/: config.h  config.h~  evl_net.hpp  evl_net_def.h  setup.h  tcp_client.h  tcp_server.h  tcp_session.h  tcp_session.h~
include/evl_net/detail/: .net_mgr.h.un~  net_mgr.h  net_mgr.h~
scripts/: build_for_msvc120.bat  cleanup.bat  evl_logger.props  ignores.props  log4cplus.props  platform.props  publish.bat
source/: .CMakeLists.txt.un~  .net_mgr.cc.un~  .tcp_client.cc.un~  .tcp_client_storage_impl.h.un~  .tcp_server.cc.un~  .tcp_server_storage_impl.h.un~  .tcp_session.cc.un~  .tcp_session_storage_impl.h.un~  CMakeLists.txt  CMakeLists.txt~  net_mgr.cc  net_mgr.cc~  tcp_client.cc~  tcp_client_storage_impl.cc  tcp_client_storage_impl.h  tcp_client_storage_impl.h~  tcp_server.cc  tcp_server.cc~  tcp_server_storage_impl.cc  tcp_server_storage_impl.h  tcp_server_storage_impl.h~  tcp_session.cc  tcp_session.cc~  tcp_session_storage_impl.cc  tcp_session_storage_impl.h  tcp_session_storage_impl.h~
test/: _main_test_client.cc  _main_test_server.cc
test/test_client/: .Makefile.un~  ._main_test_client.cc.un~  Makefile  Makefile~  _main_test_client.cc  _main_test_client.cc~  packet_coding_xor.cc  packet_coding_xor.h  test_client
test/test_server/: Makefile  _main_test_server.cc
