# CMakeLists for src directory
PROJECT(evlnet)

aux_source_directory(. EVLNET_SRCS)

# shared library
ADD_LIBRARY(evlnet SHARED ${EVLNET_SRCS})

# static library
ADD_LIBRARY(evlnet_static STATIC ${EVLNET_SRCS})
	
SET(_STATCI_LIB_OUTPUT_NAME "evlnet_static-trl")
if (CMAKE_SYSTEM_NAME MATCHES "Windows") 
	if (MSVC_COMPILER_VERSION MATCHES "v120")
		SET(_STATCI_LIB_OUTPUT_NAME ${_STATCI_LIB_OUTPUT_NAME}_v120)
	endif()
	
	if (CMAKE_BUILD_TYPE MATCHES "Debug")
		SET(_STATCI_LIB_OUTPUT_NAME ${_STATCI_LIB_OUTPUT_NAME}_debug)
	endif()
	
else()
	
endif()

SET_TARGET_PROPERTIES(evlnet_static PROPERTIES OUTPUT_NAME ${_STATCI_LIB_OUTPUT_NAME})
SET_TARGET_PROPERTIES(evlnet PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(evlnet_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

